# vodozemac-bindings

./: .arcconfig  .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  meson.build  meson_options.txt
.gitlab/merge_request_templates/: Default.md
cpp/: Cargo.toml  Makefile  build.rs  inject-maybe
cpp/src/: account.rs  group_sessions.rs  lib.rs  lib.rs.in  maybe.rs  sas.rs  session.rs  types.rs
cpp/tests/: account.cpp  group-session.cpp  group_session.cpp  sas.cpp  session.cpp  util.hpp
cpp/vodozemac_maybe_derive/: Cargo.toml
cpp/vodozemac_maybe_derive/src/: lib.rs
docs/: en.md  zh.md
src/: account.rs  config.rs  ecies.rs  group_sessions.rs  lib.rs  sas.rs  session.rs  types.rs  utilities.rs
subprojects/: catch2.wrap
tests/: bindings_test.cpp  meson.build  test_helpers.hpp
